<resources>
    <string name="app_name">ZapeTask</string>

    <string name="zapet">ZapeT</string>
    <string name="tareas">Tareas</string>
    <string name="zapet_media">ZapeT Media</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="tema_oscuro">Tema Oscuro</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="notas">Notas</string>
    <string name="tareas_diarias">Tareas Diarias</string>
    <string name="eventos">Eventos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>


    <string name="crear_tarea">Crear Tarea</string>
    <string name="nombre_tarea">Nombre Tarea</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="descripcion_tarea">Descripción Tarea</string>
    <string name="descripcion">Descripción</string>
    <string name="hora">Hora: </string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="escoger_hora">Escoger hora</string>
    <string name="fecha">Fecha:</string>
    <string name="alarma">Alarma:</string>
    <string name="eleccion_hora_title">Incluye una hora en tu nueva tarea si lo deseas</string>
    <string name="titulo_eleccion_fecha">Cambia la fecha de tu nueva tarea si lo deseas</string>
    <string name="todo_el_dia">Todo el día</string>
    <string name="sin_recordatorios">Sin recordatorios</string>
    <string name="indica_recordatorio">Indica cuando quieres que se recuerde la tarea</string>
</resources>